@@ -1,6 +1,14 @@
 var util = require("util"),
-    zlib = require("zlib"),
     Request = require("./request");
+
+var zlib;
+try {
+    zlib = require("zlib");
+} catch (e) {
+    // The local zlib is just a shim around gzbz2 that mimics the zlib API in
+    // node 0.6. It should be removed once strata's node dependency is >= 0.6.
+    zlib = require("./zlib");
+}
 
 /**
  * A middleware that gzip encodes the body of the response on the fly if the
