@@ -1,4 +1,4 @@
-var util = require("util"),
+var utils = require("./utils"),
     strata = require("./index");
 
 /**
@@ -11,7 +11,7 @@ module.exports = function (app, pattern, replacement) {
         pattern = new RegExp("^" + pattern + "$");
     }
 
-    if (!util.isRegExp(pattern)) {
+    if (!utils.isRegExp(pattern)) {
         throw new strata.Error("Pattern must be a RegExp");
     }
 
