@@ -1,5 +1,4 @@
-var util = require("util"),
-    strata = require("./index"),
+var strata = require("./index"),
     utils = require("./utils");
 
 module.exports = Router;
@@ -37,7 +36,7 @@ Router.prototype.route = function route(pattern, app, methods) {
         pattern = compileRoute(pattern, keys);
     }
 
-    if (!util.isRegExp(pattern)) {
+    if (!utils.isRegExp(pattern)) {
         throw new strata.Error("Pattern must be a RegExp");
     }
 
