@@ -10,6 +10,7 @@ exports.byteSizeFormat = byteSizeFormat;
 exports.escapeHtml = escapeHtml;
 exports.escapeRe = escapeRe;
 exports.isEmptyObject = isEmptyObject;
+exports.isRegExp = isRegExp;
 exports.compareLength = compareLength;
 exports.sortByLength = sortByLength;
 exports.badRequest = badRequest;
@@ -151,6 +152,14 @@ function isEmptyObject(obj) {
     }
 
     return true;
+}
+
+/**
+ * Returns `true` if the given `obj` is a RegExp.
+ * Note: This can be removed on node 0.6 in favor of util.isRegExp.
+ */
+function isRegExp(obj) {
+    return Object.prototype.toString.call(obj) == "[object RegExp]";
 }
 
 /**
