@@ -6,7 +6,7 @@
     "keywords": ["web", "server", "framework", "middleware", "rack", "jsgi", "wsgi", "connect", "express"],
     "homepage": "http://stratajs.org",
     "engines": {
-        "node": "~0.6.1"
+        "node": ">= 0.4.7"
     },
     "repository": {
         "type": "git",
@@ -17,7 +17,8 @@
         "bufferedstream": "~1.0.1",
         "mime": "1.2.3",
         "strftime": "0.4.6",
-        "markdown": "~0.3.1"
+        "markdown": "~0.3.1",
+        "gzbz2": "0.1.0"
     },
     "devDependencies": {
         "vows": "0.6.0",
